--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,4 +31,7 @@
 </div> -->
 
 <!-- Para Store -->
- <app-my-counter></app-my-counter>
+ <!-- <app-my-counter></app-my-counter> -->
+
+<!-- Para decoradores -->
+<p appEjemplo>Highlight me!</p>
